objects/HZ_Schools__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>To capture the related account name</description>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>To hold Account type</description>
        <formula>TEXT( Account__r.AccountType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>HZ Schools</relationshipLabel>
        <relationshipName>HZ_Schools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Elementary</fullName>
                </value>
                <value>
                    <fullName>Middle</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <label>Cohort</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FitnessGram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FitnessGram</label>
        <referenceTo>Fitness_Gram__c</referenceTo>
        <relationshipLabel>HZ Schools</relationshipLabel>
        <relationshipName>HZ_Schools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grade_Range__c</fullName>
        <label>Grade Range</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HZ_school_recognition_program__c</fullName>
        <inlineHelpText>How did you hear about the Healthy Zone School Recognition Program?</inlineHelpText>
        <label>HZ school recognition program?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Students__c</fullName>
        <label>Number of Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Principal_Email__c</fullName>
        <label>Principal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Principal_Name__c</fullName>
        <label>Principal Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_Phone__c</fullName>
        <label>Principal Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Program_Level__c</fullName>
        <label>Program Level</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Year__c</fullName>
        <label>Program Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotion_Year__c</fullName>
        <label>Promotion Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Fax__c</fullName>
        <label>School Fax</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Id__c</fullName>
        <description>FitnessGram School Id</description>
        <label>School Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <label>School Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Phone__c</fullName>
        <label>School Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>School_Setting__c</fullName>
        <label>School Setting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Urban</fullName>
                </value>
                <value>
                    <fullName>Suburban</fullName>
                </value>
                <value>
                    <fullName>Rural</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Street__c</fullName>
        <label>School Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_Type__c</fullName>
        <label>School Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Charter</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_activity_funding_spent_per_School__c</fullName>
        <label>Total activity funding spent per School</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_equipment_funding_spent_per_School__c</fullName>
        <label>Total equipment funding spent per School</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>HZ School</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HZ-{0000}</displayFormat>
        <label>HZ Schools Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HZ Schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>